format code with prettier

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,12 @@
                 required
               />
               <span id="link-input-error"></span>
-              <button class="popup__form-submit-button popup__form-submit-button_inactive" type="submit">
+              <button
+                class="
+                  popup__form-submit-button popup__form-submit-button_inactive
+                "
+                type="submit"
+              >
                 Create
               </button>
             </form>
@@ -124,7 +129,10 @@
               class="popup__close-button popup__close-button_type_photo"
               type="button"
             ></button>
-            <img class="popup__photo" src="<%=require('./blocks/images/huntington-beach.jpg')%>" alt="Huntington beach"/>
+            <img
+              class="popup__photo"
+              src="<%=require('./blocks/images/huntington-beach.jpg')%>"
+              alt="Huntington beach"/>
             <h3 class="popup__text"></h3>
           </div>
         </div>
