refactor: make Card and Section instances global

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Neta Hadar Itzhak at Yandex" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link href="./pages/index.css" type="text/css" />
     <title>Around the U.S.</title>
   </head>
 
@@ -132,7 +132,8 @@
             <img
               class="popup__photo"
               src="<%=require('./blocks/images/huntington-beach.jpg')%>"
-              alt="Huntington beach"/>
+              alt="Huntington beach"
+            />
             <h3 class="popup__text"></h3>
           </div>
         </div>
