--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,14 @@
           <div class="profile__picture"></div>
           <div class="profile__info">
             <div class="profile__info-title">
-              <h1 class="profile__name">Jacques Cousteau</h1>
+              <h1 class="profile__name"></h1>
               <button
                 class="profile__edit-button"
                 type="button"
                 aria-label="edit button"
               ></button>
             </div>
-            <p class="profile__job-description">Explorer</p>
+            <p class="profile__job-description"></p>
           </div>
           <button
             class="profile__add-button"
