feat: get initial user info from server

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
       <main>
         <section class="profile">
-          <div class="profile__picture"></div>
+          <img class="profile__picture" alt="profile picture"></img>
           <div class="profile__info">
             <div class="profile__info-title">
               <h1 class="profile__name"></h1>
