feat: send new profile data to the server

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
                 class="popup__form-input"
                 id="job-input"
                 type="text"
-                name="job"
+                name="about"
                 placeholder="job title"
                 minlength="2"
                 maxlength="200"
