feat: show likes counter and update like status when user likes a card

--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@
               type="button"
               aria-label="like button"
             ></button>
-            <p class="gallery__like-number"></p>
+            <p class="gallery__like-counter"></p>
           </div>
         </div>
       </li>
